--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,8 @@ include (CheckSymbolExists)
 
 project(libpointmatcher)
 
+set(CMAKE_CXX_STANDARD 17)
+
 # Extract version from header
 set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR})
 execute_process(
